--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -12,10 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/layout_create"
-        android:padding="30dp"
-        android:layout_centerVertical="true"
+        android:padding="20dp"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="?attr/actionBarSize">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_create_party_name"
