--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -14,24 +14,16 @@
         android:layout_height="wrap_content"
         android:id="@+id/layout_join"
         android:padding="20dp"
-        android:layout_centerVertical="true"
+        android:layout_below="@id/toolbar_create"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/text_logo"
-            android:text="Burnd"
-            android:layout_marginBottom="40dp"
-            android:layout_centerHorizontal="true"
-            android:textSize="60sp" />
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="?attr/actionBarSize">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_join_party_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text_logo">
+            android:layout_height="wrap_content">
 
             <EditText
                 android:layout_width="match_parent"
