Reformat code, fix toolbar
* Fix toolbar inconsistencies
* Create more methods for code refactoring

--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -6,7 +6,7 @@
 
     <!-- Toolbar -->
     <include layout="@layout/toolbar"
-        android:id="@+id/toolbar" />
+        android:id="@+id/toolbar_join" />
 
     <!-- Main Layout -->
     <RelativeLayout
