--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     tools:context="com.insa.burnd.view.MainActivity.PostActivity">
 
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/toolbar"
+        android:id="@+id/toolbar_post" />
 
     <LinearLayout
         android:layout_width="match_parent"
