--- a/app/src/main/res/layout/fragment_newsfeed.xml
+++ b/app/src/main/res/layout/fragment_newsfeed.xml
@@ -1,21 +1,19 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.insa.burnd.view.MainActivity.NewsfeedFragment"
-    android:id="@+id/fragment_newsfeed" >
+    android:layout_height="match_parent"
+    tools:context="com.insa.burnd.view.MainActivity.NewsfeedFragment"
+    android:id="@+id/fragment_newsfeed">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="?attr/actionBarSize"
-            android:clipToPadding="false" />
+            android:layout_height="match_parent" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
@@ -35,37 +33,4 @@
         android:id="@+id/dimmed_background" >
     </View>
 
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/multiple_actions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        fab:fab_addButtonColorNormal="@color/fam_primary"
-        fab:fab_addButtonColorPressed="@color/fab_primary_pressed"
-        fab:fab_addButtonPlusIconColor="@color/white"
-        fab:fab_labelStyle="@style/menu_labels_style"
-        android:layout_marginBottom="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp">
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="@color/fab_primary"
-            fab:fab_icon="@drawable/ic_action_photo"
-            fab:fab_title="Photo"
-            fab:fab_colorPressed="@color/fab_primary_pressed"/>
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="@color/fab_primary"
-            fab:fab_icon="@drawable/ic_action_edit"
-            fab:fab_title="Post"
-            fab:fab_colorPressed="@color/fab_primary_pressed"/>
-
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
-
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
