Add Intro library, better logging, fix SPl, small tweaks
* Add Intro lib w/ readable code and fadeTransformer
* Improve logging w/ new lib
* Fix offset of SwipeRefreshLayout
* Fix SPL not appearing at launch
* Make Utils constructor private
* Rename files with better names

--- a/app/src/main/res/layout/fragment_slide4.xml
+++ b/app/src/main/res/layout/fragment_slide4.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/tutorial_4"
     android:orientation="vertical"
-    tools:context="com.insa.burnd.view.TutorialActivity.TutorialFragment4">
+    tools:context="com.insa.burnd.view.IntroActivity.SlideFragment4">
 
     <LinearLayout
         android:layout_width="275dp"
