--- a/app/src/main/res/layout/fragment_slide1.xml
+++ b/app/src/main/res/layout/fragment_slide1.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/tutorial_1"
-    tools:context="com.insa.burnd.view.TutorialActivity.TutorialFragment1">
+    tools:context="com.insa.burnd.view.IntroActivity.SlideFragment1">
 
     <TextView
         android:layout_width="wrap_content"
