--- a/app/src/main/res/layout/fragment_slide2.xml
+++ b/app/src/main/res/layout/fragment_slide2.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/tutorial_2"
-    tools:context="com.insa.burnd.view.TutorialActivity.TutorialFragment2">
+    tools:context="com.insa.burnd.view.IntroActivity.SlideFragment2">
 
     <TextView
         android:layout_width="300dp"
