--- a/app/src/main/res/layout/fragment_slide3.xml
+++ b/app/src/main/res/layout/fragment_slide3.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/tutorial_3"
-    tools:context="com.insa.burnd.view.TutorialActivity.TutorialFragment3">
+    tools:context="com.insa.burnd.view.IntroActivity.SlideFragment3">
 
     <TextView
         android:layout_width="250dp"
