Fix Butterknife issue, small fixes
* Make use of Base classes more
* Reformat layout file
* Minify code and shrink resources unused

--- a/app/src/main/res/layout/fragment_newsfeed.xml
+++ b/app/src/main/res/layout/fragment_newsfeed.xml
@@ -27,10 +27,10 @@
         android:background="#ca000000" />
 
     <View
+        android:id="@+id/dimmed_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/dimmed_background_color"
-        android:id="@+id/dimmed_background" >
+        android:background="@color/dimmed_background_color">
     </View>
 
 </RelativeLayout>
