--- a/app/src/main/res/layout/fragment_slide1.xml
+++ b/app/src/main/res/layout/fragment_slide1.xml
@@ -1,19 +1,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/tutorial_1"
-    tools:context="com.insa.burnd.view.IntroActivity.SlideFragment1">
+    android:background="@color/link"
+    tools:context="com.insa.burnd.view.IntroActivity.SlideFragment2">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Burnd"
-        android:id="@+id/textView3"
+        android:text="Share every amazing moment of your party"
+        android:id="@+id/textView4"
+        android:layout_marginTop="123dp"
         android:textColor="@android:color/white"
-        android:textSize="70sp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="211dp" />
+        android:textSize="30sp"
+        android:gravity="center"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
