--- a/app/src/main/res/layout/fragment_slide2.xml
+++ b/app/src/main/res/layout/fragment_slide2.xml
@@ -1,16 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/tutorial_2"
-    tools:context="com.insa.burnd.view.IntroActivity.SlideFragment2">
+    android:background="@color/accent"
+    tools:context="com.insa.burnd.view.IntroActivity.SlideFragment3">
 
     <TextView
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Share every amazing moment of your party"
+        android:text="Meet the people you like instantly"
         android:id="@+id/textView4"
-        android:layout_marginTop="123dp"
+        android:layout_marginTop="126dp"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         android:gravity="center"
