--- a/app/src/main/res/layout/fragment_slide3.xml
+++ b/app/src/main/res/layout/fragment_slide3.xml
@@ -2,21 +2,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/tutorial_3"
-    tools:context="com.insa.burnd.view.IntroActivity.SlideFragment3">
+    android:background="@color/primary_dark"
+    android:orientation="vertical"
+    tools:context="com.insa.burnd.view.IntroActivity.SlideFragment4">
 
-    <TextView
-        android:layout_width="250dp"
+    <LinearLayout
+        android:layout_width="275dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Meet the people you like instantly"
-        android:id="@+id/textView4"
-        android:layout_marginTop="126dp"
-        android:textColor="@android:color/white"
-        android:textSize="30sp"
-        android:gravity="center"
+        android:orientation="vertical"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="When it&apos;s all over, the party is deleted."
+            android:id="@+id/textView4"
+            android:layout_marginTop="121dp"
+            android:textColor="@android:color/white"
+            android:gravity="center"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="It gets burnd."
+            android:layout_marginTop="121dp"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:gravity="center"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
 </RelativeLayout>
