Change item name in Settings
* Leave the Party -> Leave the party

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -44,6 +44,6 @@
 
     </PreferenceCategory>
 
-    <Preference android:title="Leave the Party" android:key="leave_party"/>
+    <Preference android:title="Leave the party" android:key="leave_party"/>
     <Preference android:title="Logout" android:key="logout"/>
 </PreferenceScreen>
