--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -11,7 +11,21 @@
         android:id="@+id/redView"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/timer"
+        android:text="Timer"
+        android:gravity="center"
+        android:textColor="@color/primary_text"
+        android:textSize="100sp"
+        android:layout_above="@+id/linearLayout"
+        android:autoText="false" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
